# secsep-octal

./: .dockerignore  .gitignore  Dockerfile  Infer_TODO.md  README.md  TODO.md  artifact-README.md  demo.in  dune-project  gen_asm_tests.sh  notes.md  octal.opam  pyproject.toml  salsa20_annotated.s  x86_parser.ml
asm/: bench_ed25519_plain.c.s  bench_ed25519_plain.s  bench_ed25519_plain_noinline.s  bench_salsa20.s  bench_sha512_plain.c.s  bench_sha512_plain.s  demo.s  double_layer.s  sha512_block_data_order.s  sha512_block_data_order_mini.s  sha512_final_impl.s  standalone_salsa20.c.s  standalone_salsa20.s  standalone_salsa20_noinline.s
checker/: arch_type.ml  arch_type_basic.ml  basic_type.ml  branch_anno.ml  call_anno.ml  conversion.ml  dep_change_ctx.ml  dune  flag_type.ml  func_interface.ml  isa_flag_config.ml  mem_anno.ml  mem_type.ml  reg_type.ml  reg_type_basic.ml  stack_spill_info.ml  z3_sexp.ml
interface/: bench_ed25519_plain  bench_ed25519_plain.mem_interface  bench_ed25519_plain.symbol_layout  bench_ed25519_plain_noinline.mem_interface  bench_ed25519_plain_noinline.symbol_layout  bench_ed25519_plain_noinline.taint_api  bench_ed25519_plain_noinline.taint_api_csvt  bench_salsa20.mem_interface  demo  (+13 more)
lib/: dune  (+85 more)
test/: dune  test_function_interface.ml  test_function_interface_new.ml  test_function_single_infer_state.ml  test_learn_z3.ml  test_parse_multi_func.ml  test_parser.ml  test_prog_type.ml  test_range_type_infer.ml  test_single_exp.ml  test_single_type_infer.ml  test_taint_type_infer.ml  test_transform.ml  test_type.ml  test_z3.ml  test_z3_bitvec.ml
test/asm/: adc_suffix.s  add.s  add_flags.s  add_gdb  add_suffix.s  and_suffix.s  bswap_suffix.s  bt_suffix.s  cmove_suffix.s  cmoveq_suffix.s  dec_suffix.s  imul_suffix.s  inc_suffix.s  mov_suffix.s  movz_suffix.s  mul_suffix.s  neg_suffix.s  not_suffix.s  or_suffix.s  rol_suffix.s  ror_suffix.s  sal_suffix.s  sar_suffix.s  sbb_suffix.s  shl_suffix.s  shr_suffix.s  shrd_suffix.s  sub.s  sub_suffix.s  xor_suffix.s
(+9 files in other folders)
